finished items campers

--- a/src/Styles/base.css
+++ b/src/Styles/base.css
@@ -45,6 +45,11 @@ ol {
   margin: 0;
   padding: 0;
 }
+li{
+  margin: 0;
+    padding: 0;
+  list-style-type: none;
+}
 
 h1,
 h2,
@@ -60,6 +65,10 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+svg{
+  stroke: none;
+  fill: var(var(--main))
 }
 
 button {
