API ID for one camper and favorite campers

--- a/src/components/DetailsCamper/ReviewsLocation/ReviewsLocation.module.css
+++ b/src/components/DetailsCamper/ReviewsLocation/ReviewsLocation.module.css
@@ -2,13 +2,14 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  margin-bottom: 24px;
+
 }
 .coverRating {
   display: flex;
   fill: var(--rating);
   align-items: center;
   gap: 4px;
+  text-decoration: underline;
 }
 .coverLocation {
   display: flex;
