--- a/src/components/VehicleItem/VehicleItem.module.css
+++ b/src/components/VehicleItem/VehicleItem.module.css
@@ -8,6 +8,9 @@
   color: var(--text);
   margin-bottom: 24px;
 }
+.camper {
+  margin-bottom: 24px;
+}
 .btn {
   background-color: var(--button);
   border-radius: 200px;
@@ -17,4 +20,7 @@
   line-height: 150%;
   letter-spacing: -0.01em;
   color: #fff;
+}
+.btn:hover, .btn:focus{
+  background-color: var(--button-hover);
 }
