--- a/src/pages/Catalog/Catalog.module.css
+++ b/src/pages/Catalog/Catalog.module.css
@@ -1,9 +1,15 @@
-.catalogContainer{
-    padding-top: 48px;
-    display: flex;
-    gap: 64px;
-        align-items: flex-start;
+.catalogContainer {
+  padding-top: 48px;
+  display: flex;
+
+  gap: 64px;
+  align-items: flex-start;
+  padding-bottom: 52px;
 }
 .vehicleContainer {
-    min-width: 890px;
+  min-width: 890px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
