--- a/src/pages/Camper/Camper.module.css
+++ b/src/pages/Camper/Camper.module.css
@@ -1,37 +1,42 @@
-.camperContainer{
-    padding-top: 48px;
-    padding-bottom: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
+.camperContainer {
+  padding-top: 48px;
+  padding-bottom: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
 }
-.name{
 
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 133%;
-    color: var(--main);
-    margin-bottom: 8px;
+.linkList {
+  display: flex;
+  gap: 40px;
 }
-.camper{
-    margin-bottom: 16px;
+.hr {
+  border: none;
+  border-top: 1px solid var(--gray-light);
+  width: 100%;
+margin-bottom: 44px;
 }
-.price{
+.linkItem {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 120%;
+  color: var(--main);
+  padding-bottom: 7px;
+  
+}
 
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 133%;
-    color: var(--main);
-    margin-bottom: 28px;
+.linkItem:hover,
+.linkItem:focus {
 }
-.descr{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    color: var(--text);
-    margin-bottom: 60px;
+
+.activeLink {
+  border-bottom: 5px solid var(--button);
+z-index: 1999;
+position: relative;
 }
-.linkList{
-    display: flex;
-    gap: 40px;
+
+.wrapperBottom {
+  display: flex;
+  gap: 40px;
 }
