--- a/src/Styles/base.css
+++ b/src/Styles/base.css
@@ -80,9 +80,13 @@ button {
   border: none;
   background-color: transparent;
 }
-input{
-  border: none;
+input:focus{
+
+    outline: none;
+    border: none;
+  
 }
+
 
 .container {
 display: flex;
