--- a/src/components/CamperId/FormRequest/FormRequest.module.css
+++ b/src/components/CamperId/FormRequest/FormRequest.module.css
@@ -1,4 +1,4 @@
-@import "react-day-picker/dist/style.css";
+
 .formContainer {
   border: 1px solid var(--gray-light);
   border-radius: 10px;
@@ -33,10 +33,12 @@ form {
   border: none;
   border-radius: 12px;
   padding: 18px 18px;
-  height: 60px;
+
   background-color: var(--inputs);
 }
-
+.inputComment{
+   resize: vertical;
+}
 .error {
   color: var(--button);
 }
