--- a/src/Styles/base.css
+++ b/src/Styles/base.css
@@ -27,7 +27,7 @@ html {
 }
 
 body {
-margin: 0 auto;
+  margin: 0 auto;
   display: flex;
   place-items: center;
   justify-content: center;
@@ -38,10 +38,8 @@ margin: 0 auto;
 
 a {
   text-decoration: none;
-  
 }
 a:visited {
-  color: inherit;
   text-decoration: none;
 }
 ul,
@@ -49,9 +47,9 @@ ol {
   margin: 0;
   padding: 0;
 }
-li{
+li {
   margin: 0;
-    padding: 0;
+  padding: 0;
   list-style-type: none;
 }
 
@@ -70,9 +68,9 @@ img {
   max-width: 100%;
   height: auto;
 }
-svg{
+svg {
   stroke: none;
-  fill: var(var(--main))
+  fill: var(var(--main));
 }
 
 button {
@@ -80,20 +78,33 @@ button {
   border: none;
   background-color: transparent;
 }
-input:focus{
-
-    outline: none;
-    border: none;
-  
+input:focus {
+  outline: none;
+  border: none;
 }
 
-
 .container {
-display: flex;
+  display: flex;
   place-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 100vw;
   padding: 0 64px;
 }
 
+.buttonBase {
+  border-radius: 200px;
+  padding: 16px 48px;
+  min-width: 160px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: -0.01em;
+  background-color: var(--button);
+  color: var(--inputs);
+}
 
+.buttonBase:hover,
+.buttonBase:focus {
+  background: var(--button-hover);
+}
