--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,36 +1,36 @@
-
-.headerContainer{
- 
-    background-color: var(--inputs);
-    
-   
+.headerContainer {
+    width: 100vw;
+  background-color: var(--inputs);
 }
-.wrapper{
-width: 100%;
-height: 72px;
-display: flex;
-    align-items: center;
-        justify-content: center;
+.wrapper {
+  width: 100%;
+  height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.navLogo{
-    position: absolute;
-    left: 64px;
+.navLogo {
+  position: absolute;
+  left: 64px;
 }
-.nav{
- 
-    display: flex;
-    gap: 32px;
-    
+.nav {
+  display: flex;
+  gap: 32px;
 }
-.link{
-font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    color: var(--main);
+.link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: var(--main);
 }
-.link:hover, .link:focus{
-    color: var(--button-hover);
+.link:hover,
+.link:focus {
+  color: var(--button-hover);
 }
-.activeLink{
-color: var(--button-hover);
+.link:active {
+  color: var(--button-hover);
+  /* Це для активної сторінки */
+}
+.activeLink {
+  color: var(--button-hover);
 }
